kano-toolset (3.14.0-0) unstable; urgency=low

  * Moved kano content and tracking sync to network hooks from kano-ui-autostart
  * Add Kano URI scheme comprehension to WebApp

 -- Team Kano <dev@kano.me>  Tue, 24 Oct 2017 14:40:00 +0100

kano-toolset (3.13.0-0) unstable; urgency=low

  * Migrated Busybox dhcp client to a more modern implementation

 -- Team Kano <dev@kano.me>  Tue, 26 Sep 2017 16:16:00 +0100

kano-toolset (3.8.0-1) unstable; urgency=low

  * Added Wireless support for Spanish/Latin and custom country codes

 -- Team Kano <dev@kano.me>  Wed, 01 Feb 2017 15:49:00 +0000

kano-toolset (3.7.0-1) unstable; urgency=low

  * i18n setup and Spanish translations

 -- Team Kano <dev@kano.me>  Tue, 27 Sep 2016 11:30:00 +0100

kano-toolset (3.3.0-1) unstable; urgency=low

  * Add Kano Dialog programmatic close option

 -- Team Kano <dev@kano.me>  Tue, 17 May 2016 18:05:00 +0100

kano-toolset (3.2.0-1) unstable; urgency=low

  * Add python module for outputting data to lua
  * Add lua module for outputting data to json

 -- Team Kano <dev@kano.me>  Tue, 10 May 2016 15:18:00 +0100

kano-toolset (3.1.0-1) unstable; urgency=low

  * Split out libkano_networking into separate package
  * Add libkano_python library (and package)

 -- Team Kano <dev@kano.me>  Wed, 20 Apr 2016 14:46:00 +0100

kano-toolset (2.4.0-1) unstable; urgency=low

  * Added a number of hardware feature operation utils
  * Add libkano_networking library
  * Add decorators:
    * 'retry'
    * 'queue_cb'
  * Add DBus helper utilities
  * Add Gtk blur mixin

 -- Team Kano <dev@kano.me>  Mon, 15 Feb 2016 17:11:00 +0100

kano-toolset (2.3.0-6) unstable; urgency=low

  * Added simple way of logging an exception.

 -- Team Kano <dev@kano.me>  Thu, 19 Jan 2016 15:11:00 +0100

kano-toolset (2.3.0-5) unstable; urgency=low

  * Added option for kano-signal to open new projects (launch-share)
  * Added a few file operation utils

 -- Team Kano <dev@kano.me>  Thu, 19 Jan 2016 15:11:00 +0100
