@@ -1,0 +1,8 @@
+#!/usr/bin/kano-splash /usr/share/kano-toolset/animations/davey /bin/bash
+
+echo "Pausing..."
+sleep 15
+
+echo "Stopping splash animation"
+kano-stop-splash
+echo "byebye"
